--- a/next_page4.html
+++ b/next_page4.html
@@ -23,8 +23,9 @@
   </style>
 </head>
 <body>
-  <p id="testText"> aku tidak bisa kehilangan mu  </p>
-  <h1 id="testText2">&copy; 2024 diki</h1>
+  <p id="testText"></p>
+  <a href="https://satriacipher.netlify.app/">decrpted</a>
+  <h1 id="testText2">&copy; 2024 ******</h1>
   <script>
     // Tunggu 5 detik, lalu tampilkan teks
     setTimeout(function() {
