Add encrypted text and shift information to HTML

--- a/next_page4.html
+++ b/next_page4.html
@@ -23,7 +23,8 @@
   </style>
 </head>
 <body>
-  <p id="testText"></p>
+  <p id="testText">L oryh brx</p>
+  <P>shift: 3</P>
   <a href="https://satriacipher.netlify.app/">decrpted</a>
   <h1 id="testText2">&copy; 2024 ******</h1>
   <script>
