--- a/next_page4.html
+++ b/next_page4.html
@@ -23,17 +23,17 @@
   </style>
 </head>
 <body>
-  <p id="testText">L oryh brx</p>
-  <P id="testText3">shift: 3</P>
-  <a id="testText4" href="https://satriacipher.netlify.app/">decrpted</a>
-  <h1 id="testText2">&copy; 2024 ******</h1>
+  <p id="t1">L oryh brx</p>
+  <P id="t2">shift: 3</P>
+  <a id="t3" href="https://satriacipher.netlify.app/">decrpted</a>
+  <h1 id="t4">&copy; 2024 ******</h1>
   <script>
     // Tunggu 5 detik, lalu tampilkan teks
     setTimeout(function() {
-      document.getElementById('testText').style.display = 'block';
-      document.getElementById('testText2').style.display = 'block';
-      document.getElementById('testText3').style.display = 'block';
-      document.getElementById('testText4').style.display = 'block';
+      document.getElementById('t1').style.display = 'block';
+      document.getElementById('t2').style.display = 'block';
+      document.getElementById('t3').style.display = 'block';
+      document.getElementById('t4').style.display = 'block';
     }, 5000);
   </script>
 </body>
