Update content in next_page4.html

--- a/next_page4.html
+++ b/next_page4.html
@@ -23,10 +23,7 @@
   </style>
 </head>
 <body>
-  <p id="t1">L oryh brx</p>
-  <P id="t2">shift: 3</P>
-  <a id="t3" href="https://satriacipher.netlify.app/">decrpted</a>
-  <h1 id="t4">&copy; 2024 ******</h1>
+  <p id="t1"> aku sayang kamu &copy; dwiki</p>
   <script>
     // Tunggu 5 detik, lalu tampilkan teks
     setTimeout(function() {
